# cyber-lighthouse

./: .dockerignore  .env.example  .gitignore  ALERT_CARD_REDESIGN.md  ANALYSIS_AND_RECOMMENDATIONS.md  Dockerfile  IMPLEMENTATION_DETAILS.md  INTEGRATION_SUMMARY.md  LICENSE  MARKDOWN_RENDERING.md  OPTIMIZATION_GUIDE.md  OPTIMIZATION_QUICKSTART.md  README.md  SEMANTIC_CLUSTERING.md  SETUP.md  SEVERITY_FILTER.md  WEB_DASHBOARD_GUIDE.md  WEB_DASHBOARD_IMPLEMENTATION.md  ai_client.py  ai_tasks.py  backfill_tags.py  benchmark_models.py  bump_version.py  cache.py  config.py  daily_summary.py  daily_time.py  database.py  docker-compose.yml  export_utils.py  generate_ai_content.py  logging_config.py  migrate_analysis_db.py  optimization.py  pyproject.toml  pytest.ini  real_time.py  reset.py  rss_feeds.json  seed_database.py  (+8 more)
.git-rewrite/: backup-refs  commit  message  parse  raw-refs  revs
.github/workflows/: release.yml
api/: __init__.py  alerts.py  articles.py  models.py  reports.py  routes.py  settings.py  system.py  tags_routes.py  topics.py
docs/: ARGS_RAPIDE.md  CLI_ARGUMENTS_GUIDE.md  DASHBOARD_COMMANDS.md  IMPLEMENTATION_NOTES.md  MAINTENANCE.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  RESET_GUIDE.md  SEEDING_GUIDE.md  SEMANTIC_CLUSTERING.md  TAILWIND_REDESIGN.md  VERSION_BUMPING.md  WEB_DASHBOARD_API.md  WEB_DASHBOARD_QUICKSTART.md
reports/: summary_2026-04-04.md
static/: index.html
static/css/: style.css
static/js/: api.js  app.js
tests/: README.md  __init__.py  conftest.py  test_clustering.py  test_database.py  test_scraping.py  test_utils.py
