[project]
name = "cyber-lighthouse"
version = "0.2.5"
description = "Real-time threat intelligence monitoring system with AI analysis"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "feedparser>=6.0.12",
    "google-genai>=1.69.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "trafilatura>=2.0.0",
    "sentence-transformers>=5.3.0",
    "scikit-learn>=1.8.0",
]

[tool.setuptools.packages.find]
include = ["api*"]
exclude = ["static*", "tests*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]
